--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "date-format": "^2.0.0",
     "debug": "~2.6.9",
     "express": "~4.16.0",
+    "express-amp": "^1.0.8",
     "express-form-data": "^2.0.7",
     "geoip-lite": "^1.3.6",
     "http-errors": "~1.6.2",
