--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "randomstring": "^1.1.5",
-    "superagent": "^4.1.0"
+    "superagent": "^4.1.0",
+    "windows-1251": "^1.0.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
